--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,7 @@
   link: /
 - name: About
   link: /about.html
-- name: Posts
-  link: /posts.html
+- name: Blog
+  link: /blog.html
 - name: Projects
   link: /projects.html
