Add cooking and book html pages

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,3 +4,7 @@
   link: /blog.html
 - name: Projects
   link: /projects.html
+- name: Cooking
+  link: /cooking.html
+- name: Books
+  link: /books.html
