--- a/_data/cooking.yml
+++ b/_data/cooking.yml
@@ -1,8 +1,12 @@
 - name: Fried Chicken Sandwich
   ingrediants:
-- name: Spam Musibi
+- name: Baked Mac and Cheese
   ingrediants:
-- name: Spam Musibi
+- name: Fried Chicken
+  ingredients:
+- name: Black Garlic Carbonara
+  ingredients:
+- name: Adobo v1
   ingrediants:
-- name: Spam Musibi
+- name: Adobo v2
   ingrediants:
