Update recipe titles

--- a/_data/cooking.yml
+++ b/_data/cooking.yml
@@ -1,8 +1,8 @@
 - name: Fried Chicken Sandwich
   ingrediants:
-- name: Baked Mac and Cheese
+- name: 5 Cheeses Baked Mac and Cheese
   ingrediants:
-- name: Fried Chicken
+- name: Pickle Brined Fried Chicken
   ingredients:
 - name: Black Garlic Carbonara
   ingredients:
