--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,9 @@
 title: Andre Gomes
 email: andre@cocoonfirm.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal site for Andre Gomes
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: gomesac
 github_username:  gomesac
 
 # Build settings
