--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: Andre Gomes
-email: andre@cocoonfirm.com
+email: andre@cocoon.build
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://agomes.co"
 github_username:  gomesac
 
 # Build settings
