--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,5 @@
   link: /cooking.html
 - name: Books
   link: /books.html
-- name: Scripts
-  link: /scripts.html
+- name: Resume
+  link: /resume.html
