--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
   link: /cooking.html
 - name: Books
   link: /books.html
-- name: OSS
-  link: /open-source-software.html
+- name: Cocoon
+  link: http://cocoon.build
 - name: Resume
   link: /resume.html
