Update url and https mixed content

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Andre Gomes
 email: andre@cocoon.build
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://agomes.co"
+url: "https://andrelgomes.com"
 github_username:  gomesac
 
 # Build settings
