--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,26 @@
 title: Andre Gomes
 email: andre@cocoon.build
-description: >- # this means to ignore newlines until "baseurl:"
+description: Documenting my stuff because I've learn from others' documentation.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://andrelgomes.com"
 github_username:  gomesac
 
 # Build settings
 markdown: kramdown
-theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
   - github-pages
+theme: minima
+show_excerpts: true
+header_pages: 
+  - blog.html
+  - projects.html
+minima:
+    social_links:
+      github: gomesac
+      twitter: andregomes426
+      instagram: _blasian_young_adult
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
