Update styling and rating

--- a/_data/cooking.yml
+++ b/_data/cooking.yml
@@ -1,4 +1,4 @@
-# Rating: Lunchbox Ready, Ideation phase, More R&D needed
+# Rating: Lunchbox Ready, Ideation Phase, More R&D needed
 - name: Bicol Express
   rating: More R&D needed
   rating: Lunchbox Ready
@@ -7,7 +7,7 @@
   rating: More R&D needed
   ingredients:
 - name: Black Garlic Carbonara
-  rating: Ideation phase
+  rating: Ideation Phase
   ingredients:
 - name: Pork belly Adobo 
   rating: More R&D needed
